[bugfix] missing config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/minhascontas
+spring.datasource.username=admin
+spring.datasource.password=1q2w3e
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuração do Hibernate para criar tabelas automaticamente
