--- a/.github/workflows/pullRequestWorkflow.yaml
+++ b/.github/workflows/pullRequestWorkflow.yaml
@@ -12,6 +12,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: "17"
+          distribution: "temurin"
+          cache: maven
+
+      - name: Compile o projeto (sem testes)
+        run: mvn -B clean compile
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+
     services:
       postgres:
         image: postgres:15
@@ -37,5 +54,5 @@ jobs:
           distribution: "temurin"
           cache: maven
 
-      - name: Build with Maven
-        run: mvn -B clean install
+      - name: Executar os testes
+        run: mvn test
