--- a/.github/workflows/pullRequestWorkflow.yaml
+++ b/.github/workflows/pullRequestWorkflow.yaml
@@ -25,6 +25,13 @@ jobs:
       - name: Compile o projeto (sem testes)
         run: mvn -B clean compile
 
+  build-docker:
+    runs-on: ubuntu-latest
+    needs: build-java
+
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Build do Docker com Docker Compose
         run: docker compose build
 
@@ -59,3 +66,13 @@ jobs:
 
       - name: Executar os testes
         run: mvn test
+
+  docker-test:
+    runs-on: ubuntu-latest
+    needs: build-docker
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Rodar testes dentro do Docker Compose
+        run: docker compose up --build --abort-on-container-exit --exit-code-from app
