--- a/.github/workflows/pullRequestWorkflow.yaml
+++ b/.github/workflows/pullRequestWorkflow.yaml
@@ -27,7 +27,7 @@ jobs:
 
   build-docker:
     runs-on: ubuntu-latest
-    needs: build-java
+    needs: build
 
     steps:
       - uses: actions/checkout@v4
