--- a/.github/workflows/pullRequestWorkflow.yaml
+++ b/.github/workflows/pullRequestWorkflow.yaml
@@ -75,4 +75,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Rodar testes dentro do Docker Compose
+        env:
+          DATASOURCE_DB: ${{ secrets.DATASOURCE_DB }}
+          DATASOURCE_USERNAME: ${{ secrets.DATASOURCE_USER }}
+          DATASOURCE_PASSWORD: ${{ secrets.DATASOURCE_PASSWORD }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
         run: docker compose up --build --abort-on-container-exit --exit-code-from app
