--- a/.github/workflows/pullRequestWorkflow.yaml
+++ b/.github/workflows/pullRequestWorkflow.yaml
@@ -74,11 +74,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Criar arquivo .env com secrets
+
+      - name: Create .env file
         run: |
-          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
-          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
-          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+          cat <<EOF > .env
+          DATASOURCE_PASSWORD=${{ secrets.DATASOURCE_PASSWORD }}
+          DATASOURCE_URL=${{ secrets.DATASOURCE_URL }}
+          DATASOURCE_USERNAME=${{ secrets.DATASOURCE_USERNAME }}
+          POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+          POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+          EOF
 
       - name: Rodar testes dentro do Docker Compose        
-        run: docker compose up --build --abort-on-container-exit --exit-code-from app
+        run: docker compose --env-file .env up --build --abort-on-container-exit --exit-code-from app
