[bugfix] adding helthchecks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,15 @@ services:
       - pgdata:/var/lib/postgresql/data
     env_file:
       - .env
+    healthcheck:
+      test:
+        - CMD
+        - pg_isready
+        - '-U'
+        - postgres
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   pgdata: null
