--- a/.github/workflows/pullRequestWorkflow.yaml
+++ b/.github/workflows/pullRequestWorkflow.yaml
@@ -25,6 +25,16 @@ jobs:
       - name: Compile o projeto (sem testes)
         run: mvn -B clean compile
 
+  build-docker:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build do Docker com Docker Compose
+        run: docker compose build
+
   test:
     runs-on: ubuntu-latest
     needs: build
@@ -56,3 +66,24 @@ jobs:
 
       - name: Executar os testes
         run: mvn test
+
+  docker-test:
+    runs-on: ubuntu-latest
+    needs: build-docker
+
+    steps:
+      - uses: actions/checkout@v4
+
+
+      - name: Create .env file
+        run: |
+          cat <<EOF > .env
+          DATASOURCE_PASSWORD=${{ secrets.DATASOURCE_PASSWORD }}
+          DATASOURCE_URL=${{ secrets.DATASOURCE_URL }}
+          DATASOURCE_USERNAME=${{ secrets.DATASOURCE_USERNAME }}
+          POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+          POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+          EOF
+
+      - name: Rodar testes dentro do Docker Compose        
+        run: docker compose --env-file .env up --build --abort-on-container-exit --exit-code-from test test
