--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   app:
     build:
@@ -11,6 +10,19 @@ services:
     env_file:
       - .env
 
+  test:
+    image: maven:3.9-eclipse-temurin-17
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - .:/app
+      - /var/run/docker.sock:/var/run/docker.sock
+    env_file:
+      - .env
+    command: mvn test
+    working_dir: /app
+
   db:
     image: postgres:15
     restart: always
@@ -20,6 +32,15 @@ services:
       - pgdata:/var/lib/postgresql/data
     env_file:
       - .env
+    healthcheck:
+      test:
+        - CMD
+        - pg_isready
+        - '-U'
+        - postgres
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   pgdata: null
